--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 group 'com.tander.logistics'
-version '0.0.1-TEST'
+version '0.0.2-TEST'
 
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 //apply plugin: 'codenarc'
-//apply plugin: 'idea'
 
 repositories {
     maven {
@@ -15,18 +14,21 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'org.codehaus.groovy:groovy-all:2.4.7'
-    compile 'org.tmatesoft.svnkit:svnkit:1.8.12'
-    compile 'commons-io:commons-io:2.4'
-    compile 'org.apache.commons:commons-compress:1.10'
+//    compile 'org.codehaus.groovy:groovy-all:2.4.7'
+    compile 'org.tmatesoft.svnkit:svnkit:1.8.14'
+    compile 'commons-io:commons-io:2.5'
+//    compile 'org.apache.commons:commons-compress:1.10'
     testCompile 'junit:junit:4.12'
 }
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 publishing {
     repositories {
         maven {
             credentials {
-                username project.properties.domainUsername
+                username project.properties.domainUser
                 password project.properties.domainPassword
             }
             if (project.version.toString().endsWith('-SNAPSHOT')) {
@@ -43,7 +45,7 @@ publishing {
     }
 }
 
-test {
-    systemProperty 'domainUser', project.getProperty('domainUser')
-    systemProperty 'domainPassword', project.getProperty('domainPassword')
-}
+//test {
+//    systemProperty 'domainUser', project.getProperty('domainUser')
+//    systemProperty 'domainPassword', project.getProperty('domainPassword')
+//}
