--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 group 'com.tander.logistics'
-
 version '0.0.2-TEST'
+
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
-//apply plugin: 'codenarc'
 
 repositories {
     maven {
@@ -14,10 +13,8 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-//    compile 'org.codehaus.groovy:groovy-all:2.4.7'
     compile 'org.tmatesoft.svnkit:svnkit:1.8.14'
     compile 'commons-io:commons-io:2.5'
-//    compile 'org.apache.commons:commons-compress:1.10'
     testCompile 'junit:junit:4.12'
 }
 
@@ -46,8 +43,8 @@ publishing {
 }
 
 test {
-//    systemProperty 'domainUser', project.getProperty('domainUser')
-//    systemProperty 'domainPassword', project.getProperty('domainPassword')
-    systemProperty 'domainUser', 'bogomolov_av'
-    systemProperty 'domainPassword', 'qwe123ZXC456'
+    systemProperty 'domainUser', project.getProperty('domainUser')
+    systemProperty 'domainPassword', project.getProperty('domainPassword')
+//    systemProperty 'domainUser', 'bogomolov_av'
+//    systemProperty 'domainPassword', 'qwe123ZXC456'
 }
