Поднята версия до 0.3. Реализована сборка только измененных артефактов и генерация соответсвующих ebuild файлов.

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.tander.logistics'
-version '0.0.2-TEST'
+version '0.3'
 
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
@@ -45,6 +45,4 @@ publishing {
 test {
     systemProperty 'domainUser', project.getProperty('domainUser')
     systemProperty 'domainPassword', project.getProperty('domainPassword')
-//    systemProperty 'domainUser', 'bogomolov_av'
-//    systemProperty 'domainPassword', 'qwe123ZXC456'
 }
